fixed stock notification alignment on variable product

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1272,8 +1272,8 @@ a:focus,.focus a{
 						margin: 0;
 						padding-left: 0;
 						position: absolute;
-						top: 8px;
-						right: 200px;
+						top: 10px;
+						right: 210px;
 						@media(max-width: 1023px){
 							position: fixed;
 						    bottom: 20px;
